@@ -96,6 +96,9 @@ Core
 
 * Job server displays catalog and job name in $0.
 
+* Renamed catalog_init SpecialSub to request_init to accommodate for a hook
+  called after catalog configuration (#160).
+
 UserTag
 -------
 
